add tag manager

--- a/law_woojoo.html
+++ b/law_woojoo.html
@@ -2,6 +2,34 @@
 <!doctype html>
 <html lang="ko">
 <head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-T8LXVQ5');</script>
+	<!-- End Google Tag Manager -->
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TS2Q3N6Y6W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TS2Q3N6Y6W');
+</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11103964189"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11103964189');
+</script>
+
 <title>법률사무소 우주</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -101,6 +129,12 @@ function dbdb_pri_popup() {
 
 </head>
 <body>
+
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T8LXVQ5"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	
 	<div class="con_w">
 		<div class="con">
 			<!-- <img class="finger_zoom" src="img/finger_zoom.jpg" alt=""> -->
@@ -248,8 +282,8 @@ function dbdb_pri_popup() {
 			<img src="law/img/cont_11.png" alt="">
 			
 			<form name="inputForm2" method="post" accept-charset="euc-kr" action="https://dbdbdeep.com/site17/m/woojoolaw/save.php">
-				<input type="hidden" name="ms" value="">
-				<input type="hidden" name="ca" value="">
+				<input type="hidden" name="ms" value="S00212010F">
+				<input type="hidden" name="ca" value="C05645965C">
 				<input type="hidden" name="auto_defense">
 				<section class="dbfield_sec">
 					<h2 class="ir">디비필드</h2>
