--- a/lotterentcar.html
+++ b/lotterentcar.html
@@ -7,7 +7,7 @@
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-TD6WLPK');</script>
+	})(window,document,'script','dataLayer','GTM-T4LW7NR');</script>
 	<!-- End Google Tag Manager -->
 
 <!-- Hotjar Tracking Code for my site -->
@@ -22,14 +22,14 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DFQDBP1R6L"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNT7JNR43P"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-DFQDBP1R6L');
+  gtag('config', 'G-QNT7JNR43P');
 </script>
 
 
@@ -92,7 +92,7 @@
 <body>
 
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TD6WLPK"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4LW7NR"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 
