--- a/onepick.html
+++ b/onepick.html
@@ -12,13 +12,13 @@
     <!-- End Google Tag Manager -->
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HVY3QRNVVL"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VXTMXNPLRP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HVY3QRNVVL');
+  gtag('config', 'G-VXTMXNPLRP');
 </script>
 
 <!-- Google tag (gtag.js) -->
@@ -61,12 +61,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="원픽 영업사원 수수료 0% 이벤트">
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/diet-db-8cb19.appspot.com/o/logo.jpeg?alt=media&token=22a52caf-89eb-4ae5-95b6-bc700a31aede">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/css-java-168f0.appspot.com/o/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA%202023-05-10%20%E1%84%8B%E1%85%A9%E1%84%8C%E1%85%A5%E1%86%AB%208.27.40.png?alt=media&token=e14e1bdc-d7ea-46a2-a075-61750dbb58d7">
     <meta property="og:description" content="신청자 한정 추가할인 혜택까지">
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/diet-db-8cb19.appspot.com/o/favicon.ico?alt=media&token=9ec50b03-717f-454f-8205-84256c6d4d26">
+    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/css-java-168f0.appspot.com/o/%E1%84%8C%E1%85%A6%E1%84%86%E1%85%A9%E1%86%A8%E1%84%8B%E1%85%B3%E1%86%AF%20%E1%84%8B%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A7%E1%86%A8%E1%84%92%E1%85%A2%E1%84%8C%E1%85%AE%E1%84%89%E1%85%A6%E1%84%8B%E1%85%AD_-001%20(28).png?alt=media&token=b25aefc2-3099-478d-8c0f-84dda9f9c1cc">
 
     <!-- BS -->
     <!-- Latest compiled and minified CSS -->
@@ -113,6 +113,7 @@
      <!-- Popper JS -->
    
      <script src="./js/personal.js"></script>
+
      <!-- <script src="./js/ValidCheck.js"></script> -->
 
     <script src="./js/main.js" charset="euc-kr"></script>
@@ -195,6 +196,7 @@
 
     }
 </script>
+
 
 <!-- <script type="text/javascript">
     function addScript() {
